--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my_project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --content-base ./ --port 8080"
@@ -12,20 +11,19 @@
     "axios": "^0.18.0",
     "css-loader": "^1.0.1",
     "iview": "^3.1.5",
-    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "moment": "^2.22.2",
     "querystring": "^0.2.0",
     "style-loader": "^0.23.1",
     "vue": "^2.5.17",
-    "vue-draggable": "^1.0.7",
+    "vue-draggable": "^1.0.6",
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
     "vue2-dropzone": "^3.5.2",
     "vuex": "^3.0.1",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
-  }
+    "webpack": "^4.29.5"
+  },
+  "devDependencies": {},
+  "description": ""
 }
